# ffmulticonverter-qt6

./: .gitignore  README.txt  generate_features.py  pyproject.toml  setup_old.py
ffmulticonverter/: __init__.py  about_dlg.py  audiovideotab.py  documenttab.py  ffmulticonverter.py  imagetab.py  preferences_dlg.py  presets_dlgs.py  progress.py  utils.py
man/: ffmulticonverter.1
